# aiapiproxy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT_Linux.md  DEPLOYMENT_MacOS.md  Dockerfile  README.md  aiapiproxy.example.json  aiapiproxy.service  com.aiapiproxy.plist  docker-compose.yml  log.txt
.sisyphus/plans/: aiapiproxy-refactor.md
benches/: api_bench.rs  conversion_bench.rs
scripts/: install-macos-service.sh  start.sh
src/: lib.rs  main.rs
src/config/: file.rs  mod.rs  settings.rs
src/handlers/: health.rs  mod.rs  proxy.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/models/: claude.rs  mod.rs  openai.rs
src/providers/: ark.rs  mod.rs  modelhub.rs  openai.rs
src/services/: client.rs  converter.rs  mod.rs  router.rs
src/tests/: mod.rs
src/utils/: error.rs  logging.rs  mod.rs  thought_cache.rs
tests/: config_tests.rs  converter_tests.rs  error_tests.rs  integration_tests.rs  middleware_tests.rs  models_tests.rs  streaming_tests.rs  test_tool_calling.json
