[package]
name = "aiapiproxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust HTTP proxy server that converts Claude API requests to OpenAI API format"
license = "MIT"
repository = "https://github.com/yourusername/aiapiproxy"
readme = "README.md"
keywords = ["api", "proxy", "claude", "openai", "http"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# HTTP框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 配置管理
config = "0.14"
dotenv = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步工具
futures = "0.3"
tokio-stream = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 环境变量
once_cell = "1.19"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
httpmock = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
test-log = "0.2"
env_logger = "0.10"
# 用于集成测试的额外依赖
axum-test = "14.0"
http-body-util = "0.1"

[[bin]]
name = "aiapiproxy"
path = "src/main.rs"

# 测试配置
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "config_tests"
path = "tests/config_tests.rs"

[[test]]
name = "converter_tests"
path = "tests/converter_tests.rs"

[[test]]
name = "error_tests"
path = "tests/error_tests.rs"

[[test]]
name = "middleware_tests"
path = "tests/middleware_tests.rs"

[[test]]
name = "models_tests"
path = "tests/models_tests.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

# 性能测试
[[bench]]
name = "conversion_bench"
harness = false
path = "benches/conversion_bench.rs"

[[bench]]
name = "api_bench"
harness = false
path = "benches/api_bench.rs"